# ml_samples

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
Convolutional_Neural_Networks/: .gitattributes  README.md  blr.py  echo.py  edge_detection.py  pytorch_cnn.py  tensorflow_cnn.py  tf_mnist.py  theano_cnn.py
Decision_trees/: README.md  dt.py  util.py
Feedforward_neural_network/: README.md  ann_predict.py  backpropagation.py  feedforward.py  logistic_softmax_train.py  nn.py  process.py  softmax.py
Generative_DL/: first.py
Linear_regression/: README.md  lr_1d.py
Logistic_regression/Ecommerce_logpredict/: README.md  logistic.py  logistic_predict.py  logistic_train.py  logregresserrorfunc.py
Multidimensional_regression/: README.md  dummy_variable.py  genaralization.py  l1_regularization.py  l2_regularization.py  md_lr.py  polinomial.py  pressure.py
Naive_bayes_mnist/: README.md  nb.py  nb_covariance.py
Optimizations/: README.md  opt.py  opt_utils.py
Other_samples/Gradient_check/: README.md  (+3 more)
Perceptron/: README.md  perceptron.py  util.py
Pytorch/: README.md  pt.py
Pytorch_basics/: README.md  th.py  th_sample.py  util.py
Regressions_sklearn/: README.md  regression.py
Tensorflow_basics/: README.md
Tensorflow_distributed/: README.md  distributed_training.py  parameter_server.py  worker.py
Theano_basics/: README.md  th.py  th_sample.py
Tools/: README.md  freeze_session_converter.py  model_converter.py
tf_book/: README.md  main.py
whisper/: Dockerfile  Downloader.py  MinioUploader.py  README.md  main.py  requirements.txt  result.txt
(+18 files in other folders)
